--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   },
   "dependencies": {
     "@types/d3": "7.4.3",
+    "core-js": "^3.45.0",
     "d3": "7.9.0",
     "powerbi-visuals-api": "5.11.0",
     "powerbi-visuals-utils-formattingmodel": "6.0.4"
   },
   "devDependencies": {
+    "@types/d3": "7.4.3",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "eslint": "^9.11.1",
     "eslint-plugin-powerbi-visuals": "^1.0.0",
-    "typescript": "5.5.4"
+    "less": "4.2.0",
+    "typescript": "5.4.5"
   }
 }
